--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="md:px-36">
+    <shortly-navigation></shortly-navigation>
+</div>
+<div class="overflow-x-hidden">
+    <router-outlet></router-outlet>
+    <shortly-footer></shortly-footer>
+</div>
