--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,10 +5,12 @@
 
 :root {
   --clr-primary-cyan: hsl(180, 66%, 49%);
+  --clr-primary-violet:hsl(273, 67%, 39%);
   --clr-primary-dark-violet: hsl(257, 27%, 26%);
   --clr-secondary-red: hsl(0, 87%, 67%);
   --clr-neutral-light-gray: hsl(225, 33%, 95%);
   --clr-neutral-gray: hsl(0, 0%, 75%);
+  --clr-neutral-dark-gray: hsl(220, 14%, 96%);
   --clr-neutral-grayish-violet: hsl(257, 7%, 63%);
   --clr-very-dark-blue: hsl(100%);
   --clr-very-dark-violet: hsl(260, 8%, 14%);
