--- a/src/app/features/action/action.component.scss
+++ b/src/app/features/action/action.component.scss
@@ -6,7 +6,7 @@
 
   width: 100%;
   height: 250px;
-  background: url("../../../assets/images/bg-boost-desktop.svg")
+  background: url("^/assets/images/bg-boost-desktop.svg")
     var(--clr-primary-violet);
   background-position: center;
   background-size: cover;
